Closed Bug 1321583 Opened 8 years ago Closed 8 years ago

Baldr: freeze the exports object

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: luke, Assigned: luke)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch freeze (obsolete) — Splinter Review
Super easy.
Attachment #8816521 - Flags: review?(bbouvier)
Attached patch freezeSplinter Review
Oops, needed to update some other tests that were implicitly relying on extensibility.
Attachment #8816521 - Attachment is obsolete: true
Attachment #8816521 - Flags: review?(bbouvier)
Attachment #8816607 - Flags: review?(bbouvier)
Comment on attachment 8816607 [details] [diff] [review]
freeze

Review of attachment 8816607 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good to me.
Attachment #8816607 - Flags: review?(bbouvier) → review+
Pushed by lwagner@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bf6270d8941a
Baldr: freeze the exports object (r=bbouvier)
Comment on attachment 8816607 [details] [diff] [review]
freeze

Approval Request Comment
[Feature/Bug causing the regression]: new feature in spec, not a bug
[User impact if declined]: missing feature in initial wasm release
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]:  no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: small and self-contained
Attachment #8816607 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/bf6270d8941a
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8816607 [details] [diff] [review]
freeze

wasm update for aurora52
Attachment #8816607 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: