Bug 1321583 - Baldr: freeze the exports object (r=bbouvier)

MozReview-Commit-ID: IGDH7LYKMEX